[package]
name = "logparse_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "logparse_rs"
crate-type = ["cdylib"]

[dependencies]
logparse_core = { path = "../../crates/logparse_core", version = "0.1" }
pyo3 = { version = "0.26", features = ["extension-module"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.maturin]
name = "logparse_rs"
