[package]
name = "logparse_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "logparse_rs"
crate-type = ["cdylib"]

[dependencies]
logparse_core = { path = "../../crates/logparse_core", version = "0.1" }
pyo3 = { version = "0.26", features = ["extension-module"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"

[package.metadata.maturin]
name = "logparse_rs"
include = [
    "python/logparse_rs/__init__.pyi",
    "python/logparse_rs/py.typed",
]

[profile.release]
opt-level = 3 # maximum optimizations
lto = "fat" # better cross-crate optimizations (slower build)
codegen-units = 1 # better optimization at the cost of build time
panic = "abort" # smaller/faster binaries for FFI
strip = true # remove symbols from the final artifact
debug = false # no debug info in release (default, but explicit)
debug-assertions = false
overflow-checks = false
