[build-system]
requires = ["maturin>=1.6"]
build-backend = "maturin"

[project]
name = "logparse-rs"
version = "0.1.0"
description = "Generic, fast, schema-driven log parsing and anonymization for Python (Rust core)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
]

[tool.maturin]
python-source = "python"
