[package]
name = "logparse_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "logparse_core"
crate-type = ["rlib"]

[dependencies]
memchr = "2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3 # maximum optimizations
lto = "fat" # better cross-crate optimizations (slower build)
codegen-units = 1 # better optimization at the cost of build time
panic = "abort" # smaller/faster binaries for FFI
strip = true # remove symbols from the final artifact
debug = false # no debug info in release (default, but explicit)
debug-assertions = false
overflow-checks = false
